--- a/app/src/main/res/layout/dialog_periodlength.xml
+++ b/app/src/main/res/layout/dialog_periodlength.xml
@@ -1,5 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Your Period Length"
+            android:textSize="20sp"
+            android:layout_alignParentTop="true"
+            android:textColor="@color/colorAccent"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:layout_marginTop="20sp"
+            android:layout_marginBottom="20dp"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_centerInParent="true">
+
+            <NumberPicker
+                android:id="@+id/periodLengthNP"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="20sp"/>
+
+
+
+        </RelativeLayout>
+        <Button
+            android:id="@+id/setPeriodLength"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/signupbutton"
+            android:textColor="#fff"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:gravity="center"
+            android:text="Set"
+            android:layout_centerHorizontal="true"/>
+    </LinearLayout>
 
 </RelativeLayout>
