--- a/app/src/main/res/layout/personal_info.xml
+++ b/app/src/main/res/layout/personal_info.xml
@@ -77,86 +77,107 @@
             android:singleLine="true"/>
     </LinearLayout>
 
-    <Spinner
-        android:id="@+id/sGender"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/loginbuttons"
-        android:textColor="@color/whiteText"
-        android:padding="7dp"
-        android:singleLine="true"
-        android:textSize="15sp"
-        android:entries="@array/Gender"
-        />
-    <EditText
-        android:id="@+id/etemail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/loginbuttons"
-        android:textColor="#fff"
-        android:drawableLeft="@drawable/ic_email_black_24dp"
-        android:drawableEnd="@drawable/ic_email_black_24dp"
-        android:drawableRight="@drawable/ic_email_black_24dp"
-        android:hint="E-mail"
-        android:inputType="textEmailAddress"
-        android:imeOptions="actionDone"
-        android:padding="10dp"
-        android:textSize="15sp"
-        android:singleLine="true"/>
-    <EditText
-        android:id="@+id/etPass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#fff"
-        android:drawableLeft="@drawable/ic_lock_black_24dp"
-        android:drawableRight="@drawable/ic_lock_black_24dp"
-        android:drawableEnd="@drawable/ic_lock_black_24dp"
-        android:layout_marginTop="10dp"
-        android:hint="Password"
-        android:background="@drawable/loginbuttons"
-        android:padding="10dp"
-        android:textSize="15sp"
-        android:singleLine="true"
-
-        android:inputType="textPassword"
-        android:imeOptions="actionDone"/>
-
-    <EditText
-        android:id="@+id/etconfirm_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#fff"
-        android:drawableLeft="@drawable/ic_lock_black_24dp"
-        android:drawableRight="@drawable/ic_lock_black_24dp"
-        android:drawableEnd="@drawable/ic_lock_black_24dp"
-        android:layout_marginTop="10dp"
-        android:hint="Confirm Password"
-        android:background="@drawable/loginbuttons"
-        android:padding="10dp"
-        android:textSize="15sp"
-        android:singleLine="true"
-        android:inputType="textPassword"
-        android:imeOptions="actionDone"/>
-        <RelativeLayout
+        <Spinner
+            android:id="@+id/sGender"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent">
-            <Button
-                android:id="@+id/bNext"
-                android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/loginbuttons"
+            android:textColor="@color/whiteText"
+            android:padding="7dp"
+            android:singleLine="true"
+            android:textSize="15sp"
+            android:entries="@array/Gender"
+            />
+            <TextView
+                android:id="@+id/tvInvalidEmailMessage"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_alignParentBottom="true"
-                android:layout_centerInParent="true"
-                android:background="@drawable/signupbutton"
-                android:text="Next"
-                android:textAllCaps="false"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:textColor="#fff"
-                android:textSize="20sp" />
-        </RelativeLayout>
+                android:text="*Email is invaild"
+                android:textColor="@color/Red"
+                android:gravity="bottom"
+                android:textStyle="bold|italic"
+                android:visibility="gone"
+               />
+        <EditText
+            android:id="@+id/etemail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:background="@drawable/loginbuttons"
+            android:textColor="#fff"
+            android:drawableLeft="@drawable/ic_email_black_24dp"
+            android:drawableEnd="@drawable/ic_email_black_24dp"
+            android:drawableRight="@drawable/ic_email_black_24dp"
+            android:hint="E-mail"
+            android:inputType="textEmailAddress"
+            android:imeOptions="actionDone"
+            android:padding="10dp"
+            android:textSize="15sp"
+            android:singleLine="true"/>
+        <EditText
+            android:id="@+id/etPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#fff"
+            android:drawableLeft="@drawable/ic_lock_black_24dp"
+            android:drawableRight="@drawable/ic_lock_black_24dp"
+            android:drawableEnd="@drawable/ic_lock_black_24dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:hint="Password"
+            android:background="@drawable/loginbuttons"
+            android:padding="10dp"
+            android:textSize="15sp"
+            android:singleLine="true"
+
+            android:inputType="textPassword"
+            android:imeOptions="actionDone"/>
+            <TextView
+                android:id="@+id/tvInvalidConfirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="*Password Mismatch"
+                android:textColor="@color/Red"
+                android:gravity="bottom"
+                android:textStyle="bold|italic"
+                android:visibility="gone"
+                />
+        <EditText
+            android:id="@+id/etconfirm_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#fff"
+            android:drawableLeft="@drawable/ic_lock_black_24dp"
+            android:drawableRight="@drawable/ic_lock_black_24dp"
+            android:drawableEnd="@drawable/ic_lock_black_24dp"
+
+            android:hint="Confirm Password"
+            android:background="@drawable/loginbuttons"
+            android:padding="10dp"
+            android:textSize="15sp"
+            android:singleLine="true"
+            android:inputType="textPassword"
+            android:imeOptions="actionDone"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent">
+                <Button
+                    android:id="@+id/bNext"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/signupbutton"
+                    android:text="Next"
+                    android:textAllCaps="false"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="#fff"
+                    android:textSize="20sp" />
+            </RelativeLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
