--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="Black">#000000</color>
     <color name="Blue">#2C82DA</color>
     <color name="Pink">#D82662</color>
-    <color name="lightPink">#F1C8D7</color>
+    <color name="lightPink">#E7B3C6</color>
+    <color name="extralightPink">#E9DBE0</color>
     <color name="LightBlue">#5BA0E9</color>
     <color name="Red">#FF0000</color>
     <color name="black_overlay">#66000000</color>
