--- a/app/src/main/res/layout/dialog_periodcalenderpopup.xml
+++ b/app/src/main/res/layout/dialog_periodcalenderpopup.xml
@@ -35,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/periodIcon"
+            android:layout_centerVertical="true"
             android:text="  Period"
             android:textStyle="bold"
             android:textColor="@color/Black"
@@ -74,7 +75,7 @@
         <ImageView
             android:id="@+id/flowIcon"
             android:layout_width="30dp"
-            android:layout_height="30"
+            android:layout_height="30dp"
             android:layout_alignParentLeft="true"
             android:background="@drawable/mc_period_icon" />
 
@@ -82,11 +83,12 @@
             android:id="@+id/tvFlowText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/flowIcon"
             android:text="  Flow"
-            android:textStyle="bold"
             android:textColor="@color/Black"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
 
         <ToggleButton
@@ -103,11 +105,14 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/RLPopupFlow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:layout_below="@+id/dialogPeriodHeader"
         android:padding="10dp"
         android:background="@color/gray"
+        android:visibility="gone"
         android:orientation="horizontal">
 
 
@@ -115,11 +120,15 @@
             android:id="@+id/tvFlowSubText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:layout_centerVertical="true"
             android:text="  Flow"
             android:textColor="@color/Black"
             android:textSize="20dp" />
-
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:orientation="horizontal">
         <ToggleButton
             android:id="@+id/toggle_lightflow"
             android:layout_width="40dp"
@@ -131,32 +140,62 @@
             android:layout_marginRight="5dp"
             android:textOff=" "
             android:textOn=" " />
+
         <ToggleButton
             android:id="@+id/toggle_Mediumflow"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginRight="5dp"
+            android:layout_toLeftOf="@+id/toggle_Highflow"
             android:background="@drawable/flowcheck"
             android:checked="false"
             android:textAlignment="center"
-            android:layout_toLeftOf="@+id/toggle_Highflow"
-            android:layout_marginRight="5dp"
             android:textOff=" "
             android:textOn=" " />
         <ToggleButton
             android:id="@+id/toggle_Highflow"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/flowhighseleted"
+            android:background="@drawable/flowhighcheck"
             android:checked="false"
             android:textAlignment="center"
             android:layout_alignParentRight="true"
             android:layout_marginRight="5dp"
             android:textOff=" "
             android:textOn=" " />
+        </RadioGroup>
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/RLMoodpopup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/RLPopupFlow"
+        android:padding="10dp"
+        android:orientation="horizontal"
+        >
+
+        <ImageView
+            android:id="@+id/moodsIcon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/icon_littlemoods" />
+
+        <TextView
+            android:id="@+id/tvMoodText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableRight="@drawable/rightarrow"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/moodsIcon"
+            android:text="  Mood"
+            android:textColor="@color/Black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
 
-
+    </RelativeLayout>
 
 </LinearLayout>
