--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,5 @@
     <color name="ovulationDayBackground">#512da8</color>
     <color name="neutralBackground">#ffffff</color>
     <color name="DarkBlue">#3651E9</color>
-    <color name="gray">#A8A9AD</color>
+    <color name="gray">#82F8F7F7</color>
 </resources>
