--- a/app/src/main/res/layout/bodyactivity.xml
+++ b/app/src/main/res/layout/bodyactivity.xml
@@ -45,7 +45,7 @@
             android:orientation="vertical">
 
             <RadioButton
-                android:id="@+id/rbtnworkoutHero"
+                android:id="@+id/rbtndWorkoutHero"
                 android:layout_width="270dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="90dp"
