--- a/app/src/main/res/layout/gym__congrats.xml
+++ b/app/src/main/res/layout/gym__congrats.xml
@@ -48,10 +48,10 @@
             android:textStyle="bold"
             android:padding="2dp" />
         <RatingBar
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:numStars="5"
-            />
+            android:layout_marginLeft="87dp"
+            android:layout_marginTop="3dp" />
 
 
     </LinearLayout>
