--- a/app/src/main/res/layout/gym_homepage_fragment.xml
+++ b/app/src/main/res/layout/gym_homepage_fragment.xml
@@ -4,7 +4,6 @@
     android:id="@+id/gymHomePage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="@mipmap/background03">
 
     <TextView
@@ -16,9 +15,8 @@
         android:fontFamily="cursive"
         android:textAlignment="center"
         android:textSize="30sp"
-        android:background="@drawable/gradient"
-        android:padding="20dp"
-        android:layout_marginTop="40dp"/>
+        android:background="#0E439C"
+        android:padding="20dp" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -49,9 +47,9 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:drawableRight="@mipmap/plusicon"
+                        android:drawableRight="@mipmap/dailygoalsicon"
                         android:gravity="top"
-                        android:padding="15dp"
+                        android:padding="10dp"
                         android:text="Daily Goals"
                         android:textColor="#F7F8FA"
                         android:textSize="20sp" />
@@ -59,11 +57,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:padding="15dp"
+                        android:padding="25dp"
                         android:text="Set Your Daily Goals Here"
                         android:textColor="#FFFF"
                         android:textStyle="bold|italic"
-                        android:textSize="30sp" />
+                        android:textSize="20dp" />
 
                 </LinearLayout>
                 <LinearLayout
@@ -82,8 +80,8 @@
                         android:gravity="top"
                         android:textSize="20sp"
                         android:textColor="#F7F8FA"
-                        android:drawableRight="@mipmap/plusicon"
-                        android:padding="15dp"/>
+                        android:drawableRight="@mipmap/stepsicon"
+                        android:padding="10dp"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -97,7 +95,6 @@
                             android:id="@+id/StepDisplay"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:padding="7dp"
                             android:text="0"
                             android:textColor="#fff"
                             android:textSize="45dp"
@@ -139,11 +136,11 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="15dp"
+                        android:padding="10dp"
                         android:text="Calories"
                         android:textColor="#F7F8FA"
                         android:textSize="20sp"
-                        android:drawableRight="@mipmap/plusicon"/>
+                        android:drawableRight="@mipmap/caloriesicon"/>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -154,12 +151,12 @@
 
                         <TextView
                             android:id="@+id/caloriesDisplay"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:padding="7dp"
                             android:text="0"
                             android:textColor="#fff"
                             android:textSize="45dp"
+                            android:textAlignment="center"
                             android:textStyle="bold|italic" />
 
                         <TextView
@@ -193,8 +190,8 @@
                         android:textSize="20sp"
                         android:textColor="#F7F8FA"
                         android:layout_weight="1"
-                        android:padding="15dp"
-                        android:drawableRight="@mipmap/plusicon"/>
+                        android:padding="10dp"
+                        android:drawableRight="@mipmap/watericon"/>
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -214,7 +211,6 @@
                             android:id="@+id/waterDisplay"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-
                             android:text="00"
                             android:layout_centerInParent="true"
                             android:textColor="#fff"
@@ -267,8 +263,8 @@
                         android:text="Sleep"
                         android:textColor="#F7F8FA"
                         android:textSize="20sp"
-                        android:padding="15dp"
-                        android:drawableRight="@mipmap/plusicon"/>
+                        android:padding="10dp"
+                        android:drawableRight="@mipmap/sleepicon"/>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -303,18 +299,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@drawable/food"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="10dp">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Food"
-                        android:textSize="20sp"
-                        android:textColor="#F7F8FA"
-                        android:drawableRight="@mipmap/plusicon"
-                        android:padding="15dp"/>
+
 
                 </LinearLayout>
             </LinearLayout>
