--- a/app/src/main/res/layout/health__info.xml
+++ b/app/src/main/res/layout/health__info.xml
@@ -42,7 +42,7 @@
             android:hapticFeedbackEnabled="true"
             android:layout_marginTop="120dp"
             android:background="@drawable/loginbuttons"
-            android:drawableLeft="@mipmap/heighticon"
+            android:drawableLeft="@mipmap/heightfinalicon"
             android:drawableRight="@drawable/ic_add_box_black_24dp"
             android:padding="15dp"
             android:text="   Height"
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:background="@drawable/loginbuttons"
-            android:drawableLeft="@mipmap/weighticon"
+            android:drawableLeft="@mipmap/weightfinalicon"
             android:drawableRight="@drawable/ic_add_box_black_24dp"
             android:padding="15dp"
             android:text="   Weight"
@@ -83,7 +83,7 @@
             android:layout_marginTop="20dp"
             android:hapticFeedbackEnabled="true"
             android:background="@drawable/loginbuttons"
-            android:drawableLeft="@drawable/ic_date_range_black_24dp"
+            android:drawableLeft="@mipmap/dateofbirthiconfinal"
             android:drawableRight="@drawable/ic_add_box_black_24dp"
             android:padding="12dp"
             android:text="   Date of Birth"
